# VinaSmol-Unaite

./: .gitignore  .gitmodules  README.md  pyproject.toml
ccvj/: pyproject.toml
ccvj/src/ccvj/: compress_pdfs.py  convert.py  convert_all_pdfs.py  license.py  network.py
docs/: litgpt_help.md
scripts/: convert_lit_ft_to_hf.sh  convert_vinasmol_to_litgpt.sh  pth_to_safetensors.py
scripts/eeve/: pretrain.py
vinasmol/: hfmodel.py  vietnamese.py
vinasmol/evaluation/: README.md
vinasmol/finetuning/: README.md  lima.yml  multimerge.yml  muri_it_vi.yml  vi_alpaca.yml  vi_multi_turn_alpaca.yml
vinasmol/merging/: README.md
vinasmol/tokenization/: README.md  __init__.py  language.py  language_exploration_lucie.ipynb  language_exploration_smollm.ipynb  training.py  vocab_extension.py
vinasmol/training/: README.md  cpt.py  cpt.sh  cpt_eeve_main.sh  cpt_eeve_main.yml  cpt_stage_1_main.sh  cpt_stage_1_main.yml  cpt_stage_1_main_bs256.yml  cpt_stage_3_annealing.sh  cpt_stage_3_annealing.yml  datamodule.py  patch_config.py
vinasmol/training/dataset/: README.md  __init__.py  annealing_data.py  constants.py  datasets.py  deduplication.py  doaj_vn.ipynb  filtering.py  mix.py  normalization.py  preparation.py  preprocessing.py  util.py  vjol.py
vinasmol/training/dataset/ccvj/: README.md  __init__.py  compress_pdfs.py  convert.py  doaj_vn.ipynb  download.py  logging.py  resource.py  scan_infer.py
vinasmol/training/dataset/filtering/: __init__.py  analyze_ppl_filtering.ipynb  code.py  common.py  english.py  run_all.sh  vietnamese.py
vinasmol/training/dataset/vjol/: README.md  __init__.py  compress_pdfs.py  util.py
vinasmol_datamodule/: pyproject.toml
vinasmol_datamodule/src/vinasmol_datamodule/: __init__.py
