[project]
name = "vinasmol"
version = "0.1.0"
description = "Vietnamese brought to SmolLM 360M"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "aiohttp",
    "certifi",
    "datasets",
    "datatrove[io,processing,cli]>=0.6",
    "diskcache",
    "ftfy",
    "gguf",
    "jsonlines",
    "litgpt[extra]>=0.5",
    "loguru",
    "matplotlib",
    "pandas",
    "pypandoc",
    "python-dotenv",
    "pyvi",
    "rensa",
    "requests",
    "seaborn",
    "sentencepiece",
    "spacy",
    "sickle",
    "tiktoken",
    "torch",
    "transformers",
    "typer",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "jupyterlab",
    "licensecheck",
    "notebook",
    "ruff",
]
