[project]
name = "vinasmol"
version = "0.1.0"
description = "Vietnamese brought to SmolLM 360M"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    # FIXME: datasets>=4.0 is necessary for IterableDataset.to_parquet
    # and for compatibility with new column formats, but is incompatible with litgpt>=0.5
    "datasets",
    "datatrove[io,processing,cli]>=0.6",
    "diskcache",
    "ftfy",
    "gguf",
    "jsonlines",
    "litgpt[extra]>=0.5",
    "loguru",
    "matplotlib",
    "pandas",
    "polars",
    "pypandoc",
    "python-dotenv",
    "pyvi",
    "rensa",
    "seaborn",
    "sentencepiece",
    "spacy",
    "tiktoken",
    "torch",
    "transformers",
    "typer",
    "vinasmol_datamodule",
    "mergekit",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "jupyterlab",
    "licensecheck",
    "notebook",
    "ruff",
]

[tool.uv.sources]
ccvj = { workspace = true }
vinasmol_datamodule = { workspace = true }

[tool.uv.workspace]
members = [
  "ccvj",
  "vinasmol_datamodule",
]
